--- a/scss/style.scss
+++ b/scss/style.scss
@@ -200,7 +200,7 @@
     }
     .icon_title {
       // background-color: rgba(0.8, 0.8, 0.8, 0);
-        background-color: rgba(1, 1, 1, 0);
+      background-color: rgba(1, 1, 1, 0);
       transform: translateY(0%);
       margin-top: 15px;
       opacity: 1;
@@ -210,109 +210,109 @@
       margin-top: 15%;
     }
   }
-  .polymat {
+  &.polymat {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337548/Portfolio/polymat_banner.jpg");
   }
-  .zugriff {
+  &.zugriff {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337551/Portfolio/zugriff_banner.png");
   }
-  .station {
+  &.station {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337552/Portfolio/4Y_Final_Render_2.jpg");
   }
-  .root {
+  &.root {
     background-image: url("/img/root_to_root_banner.jpg");
   }
-  .sparda {
+  &.sparda {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337550/Portfolio/sparda_banner.jpg");
   }
-  .margate {
+  &.margate {
     /* background-image: url("https://goo.gl/oEyn6i"); */
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571354267/Portfolio/tube_style_map_alt_colors_edited_2.jpg");
   }
-  .fusion {
+  &.fusion {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337545/Portfolio/fusion_banner.png");
   }
-  .thematic {
+  &.thematic {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337547/Portfolio/Mini_Folio_Leaflet.png");
   }
-  .victorinox {
+  &.victorinox {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337553/Portfolio/3_Presentation_One.png");
   }
-  .ccv {
+  &.ccv {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337549/Portfolio/Render_1_active.jpg");
   }
-  .adv_art {
+  &.adv_art {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337546/Portfolio/Mini_Folio_6th_Year_Art.png");
   }
-  .trid {
+  &.trid {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337544/Portfolio/2013-12-25_10.58.49.jpg");
   }
-  .arkwright {
+  &.arkwright {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337545/Portfolio/20141029_212323.jpg");
   }
-  .dog {
+  &.dog {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337544/Portfolio/higher_assignment_banner.jpg");
   }
-  .longevity {
+  &.longevity {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337545/Portfolio/Killer_Concept_Registered_Trademark.jpg");
   }
-  .dungeon {
+  &.dungeon {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337549/Portfolio/dungeon_crawler_banner.png");
   }
-  .vote {
+  &.vote {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337551/Portfolio/voting_app_banner.png");
   }
-  .nightlife {
+  &.nightlife {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337547/Portfolio/nightlife_app_banner.png");
   }
-  .recipies {
+  &.recipies {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337548/Portfolio/recipe_book_banner.png");
   }
-  /* .XO {
+  /* &.XO {
     background-image: url("https://lh3.googleusercontent.com/enyQ_Kw2Zf7aOL5xJmn66MEyQKb4LaOoyPkyL8rY7mei12iyHSahywUYZu_iZLAsslfFlbcB6RLShZjFEnYjXq-TItIqGspqgYc5-UEWiR1lzCffE7Pu9tOJNjsZJI2kOK97PaSA2DK57Ur5dnIiWTAW66zkTOjiJP_W1tCaEqgCjSSiWaI2mkWbe5MuHEdsap8KH1qBWgIrwI8jWz2G-U6YnTzNqs-i3d_dN9cbeOLyqJFsZ4I2QF1SEV2l8RcsZJV12edksChVLbtnTP6qLNfYd5DLd3YfbRgjALZsNCMSEvYwgVDU4auekHzIufKs-K9pap6X_V9HFKtQc7T7YiI47jzc-wlWeC6_32B2CEjY-7i_EdLOhWwtNySrA7sFnNilgxrC06_Qhoj4uz15JSG3DwEn3hz7GVeg6X7MD8_KQE2QpH3dIKnqmZEAahZOKCZkrk-D4wDR-2mLiZF2cW8j3SX6a6uEo_b2rY38SxZgJhtQhBcwyP5maKMmUFSdJMTgKYvHpO50E9Q712O2b30Bc0Pe2ghrDlJjiHOGp0jwl2GWBUsV60OwV1McqiEnrKZymjEgYT9Gz-rtUS6s92NUEKwVrk9aE52JEBNV=w1364-h956-no");
   } */
-  .pinterest {
+  &.pinterest {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337547/Portfolio/pinapathy_banner.png");
   }
-  .simon {
+  &.simon {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337550/Portfolio/simon_banner.png");
   }
-  .stock {
+  &.stock {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337550/Portfolio/stock_banner.png");
   }
-  .calc {
+  &.calc {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337545/Portfolio/js_calculator_banner.png");
   }
-  .gameOfLife {
+  &.gameOfLife {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337547/Portfolio/conway2.png");
   }
-  .notes {
+  &.notes {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337547/Portfolio/notes_app.png");
   }
-  .chess_platform {
+  &.chess_platform {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337547/Portfolio/chess_platform.png");
   }
-  .share_app {
+  &.share_app {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337550/Portfolio/share_app.png");
   }
 
-  .js30 {
+  &.js30 {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337553/Portfolio/30_days_js.png");
   }
-  .templates {
+  &.templates {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571352462/Portfolio/template-sites-banner.png");
   }
-  .directions_app {
+  &.directions_app {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337549/Portfolio/directions_app.png");
   }
 
-  .datavis {
+  &.datavis {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337549/Portfolio/data_vis_usa_education.png");
   }
-  .backend {
+  &.backend {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337546/Portfolio/backend-req-header.png");
   }
-  .moreCode {
+  &.moreCode {
     background-image: url("https://res.cloudinary.com/oddert/image/upload/v1571337546/Portfolio/more_code_projects.png");
   }
   // &.station {
@@ -376,7 +376,8 @@
 
 .folio_code_sep {
   // box-shadow: 0px 0px 30px rgba(0.8, 0.8, 0.8, 0.1);
-    box-shadow: 0px 0px 30px rgba(1, 1, 1, 0.1);
+  // box-shadow: 0px 0px 30px rgba(1, 1, 1, 0.1);
+  box-shadow: 0 10px 38px rgba(0, 0, 0, 0.15);
   padding: 10px;
   margin: 80px;
   border-radius: 20px;
