BUG FIX: wrong nameplace used in navDrop, now fixed

--- a/css/style.css
+++ b/css/style.css
@@ -101,20 +101,6 @@
   color: #9744e8;
 }
 
-@media only screen and (max-width: 764px) {
-  .navIcons {
-    display: none;
-  }
-
-  .navDrop {
-    display: block;
-  }
-}
-@media only screen and (min-width: 764px) {
-  .navDrop-menu {
-    display: none;
-  }
-}
 #page_two {
   margin-top: 300px;
 }
@@ -489,6 +475,25 @@
 .divider {
   width: 100%;
   border: 5px dashed red;
+}
+
+@media only screen and (max-width: 764px) {
+  .navIcons {
+    display: none;
+  }
+
+  .navDrop {
+    display: block;
+  }
+
+  .folio_code_sep {
+    margin: 20px 10px;
+  }
+}
+@media only screen and (min-width: 764px) {
+  .navDrop-menu {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=css/style.css.map */
