--- a/views/index.ejs
+++ b/views/index.ejs
@@ -269,13 +269,12 @@
       </div>
       <div class="row page_profile-bio">
         <div class="col-sm-offset-2 col-sm-8">
-          <p class="page_profile-bio-text anim">I’m also a developer, activist, artist, researcher, mountain-biker, advocate and Glaswegian-turned-Londoner.
+          <p>I’m also a developer, artist, researcher, cyclist, activist, advocate and Glaswegian-turned-Londoner.</p>
+          <p>Student BA Product Design (DPS) at Central Saint Martins, UAL.</p>
+          <p>I specialise in the application of social and user-centred design. I believe that research and listening to real people is imperative to creating meaningful solutions and adding genuine value to improve peoples’ lives. This is, to me ‘Problem Solving’, and problem solving, is the essence of design.</p>
+          <p>I have a wide skillset and focus on iterative development and the appropriate application of technology. I’m a self-taught developer with the amazing non-profit, <a href="https://www.freecodecamp.org/certification/oddert/full-stack">freeCodeCamp.</a></p>
 
-I’m currently studying BA Product Design at Central Saint Martins, UAL, having left high school in 2015 after studying such subjects as Maths, English, Physics, Graphic Communication, Product Design, and Art & Design. <!--For full results click here.-->
-
-‘Problem solving’, in my estimation, is the essence of applied design. First and foremost I am a Product Designer and more recently, developer. I believe in following a set of universal principles with all my design-related work and use it as a channel with which to explore topics that interest me such as Politics, sociology, technological development and new skill sets.
-<!--You can read more about my perspective on design here.-->
-</p>
+          <a href='/Robyn Veitch CV - Website.pdf'>Click here to view my CV</a>
 
           <div id="page_four_anchor"></div>
 
@@ -285,22 +284,22 @@ I’m currently studying BA Product Design at Central Saint Martins, UAL, having
             <div class="social_media_box">
               <a href='https://www.linkedin.com/in/robert-veitch-582aa3b6/'>
                 <div class="social-media-item social-media-one">
-                  <i class="fa fa-linkedin fa-lg"></i>
+                  <i class="fab fa-linkedin fa-lg"></i>
                 </div>
               </a>
               <a href='https://github.com/Oddert'>
                 <div class="social-media-item social-media-two">
-                  <i class="fa fa-github fa-lg"></i>
+                  <i class="fab fa-github fa-lg"></i>
                 </div>
               </a>
               <a href='https://www.freecodecamp.com/oddert'>
                 <div class="social-media-item social-media-three">
-                  <i class="fa fa-free-code-camp fa-lg"></i>
+                  <i class="fab fa-free-code-camp fa-lg"></i>
                 </div>
               </a>
               <a href='https://www.facebook.com/robert.veitch.10?ref=bookmarks'>
                 <div class="social-media-item social-media-four">
-                  <i class="fa fa-facebook fa-lg"></i>
+                  <i class="fab fa-facebook fa-lg"></i>
                 </div>
               </a>
             </div>
