swapped more images out from sub pages, updated some text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -320,7 +320,7 @@
 <section id="footer">
   <div class="footer_main text-center">
     <h4>Website designed and built by <a target="_blank" href="https://www.linkedin.com/in/robert-veitch-582aa3b6/">Robyn Veitch</a>.</h4>
-    <h5><i class="fa fa-copyright"></i> Copyright 2017 All rights reserved.</h5>
+    <h5><i class="fa fa-copyright"></i> Copyright <%= new Date().getFullYear() %> All rights reserved.</h5>
   </div>
 </section>
 <!--
